tests/snapshots/fixtures__fixture_tests_fixtures_block_tb.snap
---
source: tests/fixtures.rs
expression: program

---
Ok(
    Program {
        decls: [
            TopLevelDecl {
                kind: Fn(
                    Ident {
                        name: "main",
                        location: Location {
                            start: 3,
                            end: 7,
                        },
                    },
                    [],
                    Ty {
                        name: "void",
                        location: Location {
                            start: 13,
                            end: 17,
                        },
                    },
                    Block {
                        stmts: [
                            Stmt {
                                kind: Decl(
                                    Decl {
                                        kind: Var(
                                            Ident {
                                                name: "a",
                                                location: Location {
                                                    start: 28,
                                                    end: 29,
                                                },
                                            },
                                            None,
                                            Some(
                                                Expr {
                                                    kind: Lit(
                                                        Lit {
                                                            kind: Int(
                                                                1,
                                                            ),
                                                            location: Location {
                                                                start: 32,
                                                                end: 33,
                                                            },
                                                        },
                                                    ),
                                                    location: Location {
                                                        start: 32,
                                                        end: 33,
                                                    },
                                                },
                                            ),
                                        ),
                                        location: Location {
                                            start: 24,
                                            end: 34,
                                        },
                                    },
                                ),
                                location: Location {
                                    start: 24,
                                    end: 34,
                                },
                            },
                            Stmt {
                                kind: Block(
                                    Block {
                                        stmts: [
                                            Stmt {
                                                kind: Decl(
                                                    Decl {
                                                        kind: Var(
                                                            Ident {
                                                                name: "b",
                                                                location: Location {
                                                                    start: 54,
                                                                    end: 55,
                                                                },
                                                            },
                                                            None,
                                                            Some(
                                                                Expr {
                                                                    kind: Lit(
                                                                        Lit {
                                                                            kind: Int(
                                                                                2,
                                                                            ),
                                                                            location: Location {
                                                                                start: 58,
                                                                                end: 59,
                                                                            },
                                                                        },
                                                                    ),
                                                                    location: Location {
                                                                        start: 58,
                                                                        end: 59,
                                                                    },
                                                                },
                                                            ),
                                                        ),
                                                        location: Location {
                                                            start: 50,
                                                            end: 60,
                                                        },
                                                    },
                                                ),
                                                location: Location {
                                                    start: 50,
                                                    end: 60,
                                                },
                                            },
                                            Stmt {
                                                kind: Block(
                                                    Block {
                                                        stmts: [
                                                            Stmt {
                                                                kind: Decl(
                                                                    Decl {
                                                                        kind: Var(
                                                                            Ident {
                                                                                name: "a",
                                                                                location: Location {
                                                                                    start: 96,
                                                                                    end: 97,
                                                                                },
                                                                            },
                                                                            None,
                                                                            Some(
                                                                                Expr {
                                                                                    kind: Lit(
                                                                                        Lit {
                                                                                            kind: Int(
                                                                                                4,
                                                                                            ),
                                                                                            location: Location {
                                                                                                start: 100,
                                                                                                end: 101,
                                                                                            },
                                                                                        },
                                                                                    ),
                                                                                    location: Location {
                                                                                        start: 100,
                                                                                        end: 101,
                                                                                    },
                                                                                },
                                                                            ),
                                                                        ),
                                                                        location: Location {
                                                                            start: 92,
                                                                            end: 102,
                                                                        },
                                                                    },
                                                                ),
                                                                location: Location {
                                                                    start: 92,
                                                                    end: 102,
                                                                },
                                                            },
                                                        ],
                                                        location: Location {
                                                            start: 78,
                                                            end: 112,
                                                        },
                                                    },
                                                ),
                                                location: Location {
                                                    start: 78,
                                                    end: 112,
                                                },
                                            },
                                        ],
                                        location: Location {
                                            start: 40,
                                            end: 118,
                                        },
                                    },
                                ),
                                location: Location {
                                    start: 40,
                                    end: 118,
                                },
                            },
                        ],
                        location: Location {
                            start: 18,
                            end: 120,
                        },
                    },
                ),
                location: Location {
                    start: 0,
                    end: 120,
                },
            },
        ],
        location: Location {
            start: 0,
            end: 121,
        },
    },
)
