tests/snapshots/fixtures__fixture_tests_fixtures_empty_tb.snap
---
source: tests/fixtures.rs
expression: program

---
Ok(
    Program {
        stmts: [],
        location: Location {
            start: 0,
            end: 0,
        },
    },
)
