tests/snapshots/fixtures__fixture_tests_fixtures_function_declaration_tb.snap
---
source: tests/fixtures.rs
expression: program

---
Ok(
    Program {
        stmts: [
            Stmt {
                kind: Fn(
                    Ident {
                        name: "main",
                        location: Location {
                            start: 3,
                            end: 7,
                        },
                    },
                    [],
                    Ty {
                        name: "int",
                        location: Location {
                            start: 13,
                            end: 16,
                        },
                    },
                    Block {
                        stmts: [],
                        location: Location {
                            start: 17,
                            end: 19,
                        },
                    },
                ),
                location: Location {
                    start: 0,
                    end: 19,
                },
            },
            Stmt {
                kind: Fn(
                    Ident {
                        name: "single",
                        location: Location {
                            start: 23,
                            end: 29,
                        },
                    },
                    [
                        (
                            Ident {
                                name: "a",
                                location: Location {
                                    start: 30,
                                    end: 31,
                                },
                            },
                            Ty {
                                name: "int",
                                location: Location {
                                    start: 33,
                                    end: 36,
                                },
                            },
                        ),
                    ],
                    Ty {
                        name: "int",
                        location: Location {
                            start: 41,
                            end: 44,
                        },
                    },
                    Block {
                        stmts: [],
                        location: Location {
                            start: 45,
                            end: 47,
                        },
                    },
                ),
                location: Location {
                    start: 20,
                    end: 47,
                },
            },
            Stmt {
                kind: Fn(
                    Ident {
                        name: "double",
                        location: Location {
                            start: 51,
                            end: 57,
                        },
                    },
                    [
                        (
                            Ident {
                                name: "a",
                                location: Location {
                                    start: 58,
                                    end: 59,
                                },
                            },
                            Ty {
                                name: "int",
                                location: Location {
                                    start: 61,
                                    end: 64,
                                },
                            },
                        ),
                        (
                            Ident {
                                name: "b",
                                location: Location {
                                    start: 66,
                                    end: 67,
                                },
                            },
                            Ty {
                                name: "int",
                                location: Location {
                                    start: 69,
                                    end: 72,
                                },
                            },
                        ),
                    ],
                    Ty {
                        name: "int",
                        location: Location {
                            start: 77,
                            end: 80,
                        },
                    },
                    Block {
                        stmts: [],
                        location: Location {
                            start: 81,
                            end: 83,
                        },
                    },
                ),
                location: Location {
                    start: 48,
                    end: 83,
                },
            },
        ],
        location: Location {
            start: 0,
            end: 83,
        },
    },
)
