tests/snapshots/fixtures__fixture_tests_fixtures_invalid_expression_statement_tb.snap
---
source: tests/fixtures.rs
expression: program

---
Err(
    [
        ParsingError {
            kind: Custom(
                "Expected +, -, *, /, ==, !=, >, >=, <, <=, &&, ||.",
            ),
            location: Position(
                1,
            ),
        },
    ],
)
