tests/snapshots/fixtures__fixture_tests_fixtures_invalid_identifiers_tb.snap
---
source: tests/fixtures.rs
expression: program

---
Err(
    [
        ParsingError {
            kind: ReservedKeyword(
                "class",
            ),
            location: Span(
                (
                    28,
                    33,
                ),
            ),
        },
        ParsingError {
            kind: ReservedKeyword(
                "else",
            ),
            location: Span(
                (
                    43,
                    47,
                ),
            ),
        },
        ParsingError {
            kind: ReservedKeyword(
                "false",
            ),
            location: Span(
                (
                    57,
                    62,
                ),
            ),
        },
        ParsingError {
            kind: ReservedKeyword(
                "fn",
            ),
            location: Span(
                (
                    72,
                    74,
                ),
            ),
        },
        ParsingError {
            kind: ReservedKeyword(
                "let",
            ),
            location: Span(
                (
                    84,
                    87,
                ),
            ),
        },
        ParsingError {
            kind: ReservedKeyword(
                "if",
            ),
            location: Span(
                (
                    97,
                    99,
                ),
            ),
        },
        ParsingError {
            kind: ReservedKeyword(
                "true",
            ),
            location: Span(
                (
                    109,
                    113,
                ),
            ),
        },
    ],
)
