tests/snapshots/fixtures__fixture_tests_fixtures_invalid_return_top_level_tb.snap
---
source: tests/fixtures.rs
expression: program

---
Err(
    [
        ParsingError {
            kind: TopLevelReturn,
            location: Span(
                (
                    0,
                    9,
                ),
            ),
        },
    ],
)
