tests/snapshots/fixtures__fixture_tests_fixtures_variable_declaration_tb.snap
---
source: tests/fixtures.rs
expression: program

---
Ok(
    Program {
        decls: [
            TopLevelDecl {
                kind: Fn(
                    Ident {
                        name: "main",
                        location: Location {
                            start: 3,
                            end: 7,
                        },
                    },
                    [],
                    Ty {
                        name: "void",
                        location: Location {
                            start: 13,
                            end: 17,
                        },
                    },
                    Block {
                        stmts: [
                            Stmt {
                                kind: Decl(
                                    Decl {
                                        kind: Var(
                                            Ident {
                                                name: "a",
                                                location: Location {
                                                    start: 28,
                                                    end: 29,
                                                },
                                            },
                                            None,
                                            None,
                                        ),
                                        location: Location {
                                            start: 24,
                                            end: 30,
                                        },
                                    },
                                ),
                                location: Location {
                                    start: 24,
                                    end: 30,
                                },
                            },
                            Stmt {
                                kind: Decl(
                                    Decl {
                                        kind: Var(
                                            Ident {
                                                name: "b",
                                                location: Location {
                                                    start: 39,
                                                    end: 40,
                                                },
                                            },
                                            None,
                                            Some(
                                                Expr {
                                                    kind: Lit(
                                                        Lit {
                                                            kind: Int(
                                                                1,
                                                            ),
                                                            location: Location {
                                                                start: 43,
                                                                end: 44,
                                                            },
                                                        },
                                                    ),
                                                    location: Location {
                                                        start: 43,
                                                        end: 44,
                                                    },
                                                },
                                            ),
                                        ),
                                        location: Location {
                                            start: 35,
                                            end: 45,
                                        },
                                    },
                                ),
                                location: Location {
                                    start: 35,
                                    end: 45,
                                },
                            },
                            Stmt {
                                kind: Decl(
                                    Decl {
                                        kind: Var(
                                            Ident {
                                                name: "c",
                                                location: Location {
                                                    start: 54,
                                                    end: 55,
                                                },
                                            },
                                            Some(
                                                Ty {
                                                    name: "int",
                                                    location: Location {
                                                        start: 57,
                                                        end: 60,
                                                    },
                                                },
                                            ),
                                            None,
                                        ),
                                        location: Location {
                                            start: 50,
                                            end: 61,
                                        },
                                    },
                                ),
                                location: Location {
                                    start: 50,
                                    end: 61,
                                },
                            },
                            Stmt {
                                kind: Decl(
                                    Decl {
                                        kind: Var(
                                            Ident {
                                                name: "d",
                                                location: Location {
                                                    start: 70,
                                                    end: 71,
                                                },
                                            },
                                            Some(
                                                Ty {
                                                    name: "int",
                                                    location: Location {
                                                        start: 73,
                                                        end: 76,
                                                    },
                                                },
                                            ),
                                            Some(
                                                Expr {
                                                    kind: Lit(
                                                        Lit {
                                                            kind: Int(
                                                                1,
                                                            ),
                                                            location: Location {
                                                                start: 79,
                                                                end: 80,
                                                            },
                                                        },
                                                    ),
                                                    location: Location {
                                                        start: 79,
                                                        end: 80,
                                                    },
                                                },
                                            ),
                                        ),
                                        location: Location {
                                            start: 66,
                                            end: 81,
                                        },
                                    },
                                ),
                                location: Location {
                                    start: 66,
                                    end: 81,
                                },
                            },
                        ],
                        location: Location {
                            start: 18,
                            end: 83,
                        },
                    },
                ),
                location: Location {
                    start: 0,
                    end: 83,
                },
            },
        ],
        location: Location {
            start: 0,
            end: 83,
        },
    },
)
