tests/snapshots/fixtures__parse_fixture_tests@block.tb.snap
---
source: tests/fixtures.rs
expression: program
input_file: tests/fixtures/block.tb

---
Ok(
    Program {
        stmts: [
            Stmt {
                kind: Var(
                    Ident {
                        name: "a",
                        location: Location {
                            start: 4,
                            end: 5,
                        },
                    },
                    None,
                    Some(
                        Expr {
                            kind: Lit(
                                Lit {
                                    kind: Int(
                                        1,
                                    ),
                                    location: Location {
                                        start: 8,
                                        end: 9,
                                    },
                                },
                            ),
                            location: Location {
                                start: 8,
                                end: 9,
                            },
                        },
                    ),
                ),
                location: Location {
                    start: 0,
                    end: 10,
                },
            },
            Stmt {
                kind: Block(
                    Block {
                        stmts: [
                            Stmt {
                                kind: Var(
                                    Ident {
                                        name: "b",
                                        location: Location {
                                            start: 22,
                                            end: 23,
                                        },
                                    },
                                    None,
                                    Some(
                                        Expr {
                                            kind: Lit(
                                                Lit {
                                                    kind: Int(
                                                        2,
                                                    ),
                                                    location: Location {
                                                        start: 26,
                                                        end: 27,
                                                    },
                                                },
                                            ),
                                            location: Location {
                                                start: 26,
                                                end: 27,
                                            },
                                        },
                                    ),
                                ),
                                location: Location {
                                    start: 18,
                                    end: 28,
                                },
                            },
                            Stmt {
                                kind: Block(
                                    Block {
                                        stmts: [
                                            Stmt {
                                                kind: Var(
                                                    Ident {
                                                        name: "a",
                                                        location: Location {
                                                            start: 52,
                                                            end: 53,
                                                        },
                                                    },
                                                    None,
                                                    Some(
                                                        Expr {
                                                            kind: Lit(
                                                                Lit {
                                                                    kind: Int(
                                                                        4,
                                                                    ),
                                                                    location: Location {
                                                                        start: 56,
                                                                        end: 57,
                                                                    },
                                                                },
                                                            ),
                                                            location: Location {
                                                                start: 56,
                                                                end: 57,
                                                            },
                                                        },
                                                    ),
                                                ),
                                                location: Location {
                                                    start: 48,
                                                    end: 58,
                                                },
                                            },
                                        ],
                                        location: Location {
                                            start: 38,
                                            end: 64,
                                        },
                                    },
                                ),
                                location: Location {
                                    start: 38,
                                    end: 64,
                                },
                            },
                        ],
                        location: Location {
                            start: 12,
                            end: 66,
                        },
                    },
                ),
                location: Location {
                    start: 12,
                    end: 66,
                },
            },
        ],
        location: Location {
            start: 0,
            end: 66,
        },
    },
)
