tests/snapshots/fixtures__parse_fixture_tests@empty.tb.snap
---
source: tests/fixtures.rs
expression: program
input_file: tests/fixtures/empty.tb

---
Ok(
    Program {
        stmts: [],
        location: Location {
            start: 0,
            end: 0,
        },
    },
)
